<resources>
    <string name="app_name" translatable="false">Anime List</string>
    <string name="error" translatable="false">Error</string>
    <string name="anime_separator" translatable="false">/</string>
    <string name="bar_sort">Sort</string>
    <string name="sort_name">by name</string>
    <string name="sort_score">by score</string>
    <string name="sort_episodes_all">by episodes all</string>
    <string name="sort_asc">by ascending</string>
    <string name="sort_desc">by descending</string>
    <string name="sort_separate">Separate sort</string>
    <string name="apply">Apply</string>
    <string name="bar_filter">Filter</string>
    <string name="filter_planned">Planned</string>
    <string name="filter_watching">Watching</string>
    <string name="filter_completed">Completed</string>
    <string name="filter_onhold">On hold</string>
    <string name="filter_dropped">Dropped</string>
    <string name="filter_rewatching">Rewatching</string>
    <string name="filter_tv" translatable="false">TV</string>
    <string name="filter_ona" translatable="false">ONA</string>
    <string name="filter_ova" translatable="false">OVA</string>
    <string name="filter_movie">Movie</string>
    <string name="filter_special">Special</string>
    <string name="filter_music">Music</string>
    <string name="bar_settings">Settings</string>
    <string name="settings_nickname">Shiki\'s nickname</string>
    <string name="bar_close">Close</string>
</resources>
