<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".activities.FilterActivity">

    <Button
        android:id="@+id/filter_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/filter_planned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_planned" />

            <CheckBox
                android:id="@+id/filter_watching"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_watching" />

            <CheckBox
                android:id="@+id/filter_rewatching"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_rewatching" />

            <CheckBox
                android:id="@+id/filter_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_completed" />

            <CheckBox
                android:id="@+id/filter_onhold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_onhold" />

            <CheckBox
                android:id="@+id/filter_dropped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_dropped" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/filter_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_tv" />

            <CheckBox
                android:id="@+id/filter_ona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_ona" />

            <CheckBox
                android:id="@+id/filter_ova"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_ova" />

            <CheckBox
                android:id="@+id/filter_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_movie" />

            <CheckBox
                android:id="@+id/filter_special"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_special" />

            <CheckBox
                android:id="@+id/filter_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_music" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>